--- a/app/src/main/res/layout/view_pager_item.xml
+++ b/app/src/main/res/layout/view_pager_item.xml
@@ -6,8 +6,21 @@
 
 
     <ImageView
+        android:id="@+id/imageId"
         android:src="@drawable/image1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+
+    <TextView
+        android:id="@+id/txt"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:textSize="40dp"
+        android:layout_marginBottom="60dp"
+        android:layout_gravity="center|bottom"
+        android:text="Image Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
